force-app/main/default/objects/Customer__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant</label>
    <referenceTo>Merchant__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>