force-app/main/default/objects/Customer__c/fields/Total_Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_Made__c</fullName>
    <label>Total Payments Made</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>